@@ -1,19 +1,19 @@
 /*
- * This program is free software; you can redistribute it and/or modify it under the
- * terms of the GNU Lesser General Public License, version 2.1 as published by the Free Software
- * Foundation.
- *
- * You should have received a copy of the GNU Lesser General Public License along with this
- * program; if not, you can obtain a copy at http://www.gnu.org/licenses/old-licenses/lgpl-2.1.html
- * or from the Free Software Foundation, Inc.,
- * 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
- *
- * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
- * without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
- * See the GNU Lesser General Public License for more details.
- *
- * Copyright (c) 2001 - 2009 Object Refinery Ltd, Pentaho Corporation and Contributors..  All rights reserved.
- */
+* This program is free software; you can redistribute it and/or modify it under the
+* terms of the GNU Lesser General Public License, version 2.1 as published by the Free Software
+* Foundation.
+*
+* You should have received a copy of the GNU Lesser General Public License along with this
+* program; if not, you can obtain a copy at http://www.gnu.org/licenses/old-licenses/lgpl-2.1.html
+* or from the Free Software Foundation, Inc.,
+* 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
+*
+* This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
+* without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+* See the GNU Lesser General Public License for more details.
+*
+* Copyright (c) 2001 - 2013 Object Refinery Ltd, Pentaho Corporation and Contributors..  All rights reserved.
+*/
 
 package org.pentaho.reporting.engine.classic.core.states;
 
@@ -38,6 +38,10 @@ public class ReportStateKey
   private int sequenceCounter;
   private boolean restoreState;
 
+  // if true, indicates that an inline-subreport generated this content. Therefore it must be ignored for the
+  // purpose of finding visual content to mark page-break positions.
+  private boolean inlineSubReportState;
+
   public ReportStateKey()
   {
   }
@@ -48,7 +52,8 @@ public class ReportStateKey
                         final int groupLevel,
                         final int subreport,
                         final int sequenceCounter,
-                        final boolean restoreState)
+                        final boolean restoreState,
+                        final boolean inlineSubReportState)
   {
     this.parent = parent;
     this.cursor = cursor;
@@ -57,6 +62,7 @@ public class ReportStateKey
     this.subreport = subreport;
     this.sequenceCounter = sequenceCounter;
     this.restoreState = restoreState;
+    this.inlineSubReportState = inlineSubReportState;
   }
 
   /**
@@ -145,12 +151,18 @@ public class ReportStateKey
       result = 29 * result + groupLevel;
       result = 29 * result + subreport;
       result = 29 * result + (restoreState ? 1 : 0);
-      hashCode = new Integer(result);
+      result = 29 * result + (inlineSubReportState ? 1 : 0);
+      //noinspection UnnecessaryBoxing
+      hashCode = Integer.valueOf(result);
       return result;
     }
     return hashCode.intValue();
   }
 
+  public boolean isInlineSubReportState()
+  {
+    return inlineSubReportState;
+  }
 
   public String toString()
   {
@@ -161,6 +173,7 @@ public class ReportStateKey
         ", subreport=" + subreport +
         ", stateCode=" + ReportEvent.translateStateCode(stateCode) +
         ", restoreState=" + restoreState +
+        ", inlineSubReport=" + inlineSubReportState +
         ", stateCodeRaw=0x" + Integer.toHexString(stateCode) +
         ", parent=" + parent +
         '}';
